--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ikeoluwa's assignment</title>
 
-    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -178,7 +183,7 @@
         </div>
         <!-- pricing section -->
       </section>
-
+<!-- pricing-section -->
       <section class="pricing-section container">
         <div class="price-section-head">
           <div class="price-title-container">
@@ -193,6 +198,7 @@
           </p>
         </div>
         <div class="pricing-card">
+          <!-- pricing card one -->
           <div class="pricing--card--1">
             <div class="plan-details">
               <p class="plan-name">Basic</p>
@@ -364,6 +370,7 @@
               </ul>
             </div>
           </div>
+          <!-- pricing card two -->
           <div class="pricing--card--2">
             <div class="plan-details pro">
               <p class="plan-name pro">Professional</p>
@@ -529,11 +536,12 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  Custom Branded Domains
+                  Ad-free Experience
                 </li>
               </ul>
             </div>
           </div>
+          <!-- pricing card three -->
           <div class="pricing--card--3">
             <div class="plan-details">
               <p class="plan-name">Teams</p>
@@ -731,7 +739,9 @@
                   placeholder="Type Alias here"
                   class="cta-alias"
                 />
-                <button class="btn">Trim URL</button>
+                <button class="btn">Trim URL
+                  <img src="img/magic wand.png" alt="">
+                </button>
                 <p>
                   By clicking TrimURL, I agree to the
                   <b>Terms of Service, Privacy Policy</b> and Use of Cookies.
