--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
      <!-- HERO SECTION -->
      <section class="hero-section">
-      <div class="navigation sticky">
-      <header class="header section-center ">
+      <div class="navigation ">
+      <header class="header  ">
       <div class="logo">
         <img src="img /Logo.svg" alt="" />
        </div>
@@ -29,7 +29,7 @@
 
           <li>
             <a class="nav-link feature-tag" href="#">Features</a>
-            <img src="img/down-arrow.svg" alt="" />
+            <img src="img /down-arrow.svg" alt="" />
           </li>
           <li><a class="nav-link" href="#">Pricing</a></li>
           <li><a class="nav-link" href="#">Analytics</a></li>
@@ -64,28 +64,29 @@
 
           <a class="main-nav-link nav-cta" href="#">Learn more</a>
         </div>
-        <div>
-          <img src="img /background-chain.svg" alt="" class="hero-svg" />
+        <div class="chain-container">
+        
           <div class="hero-frame">
             <div class="hero-img">
               <img src="img /chain.png" alt=" chain image" class="chain-img"/>
             </div>
             <p class="hero-text">
-              Seamlessly transform your long URLs into concise and shareable
-              links with just few clicks.
+              Seamlessly transform your long URLs into concise and <b> shareable
+              links</b> with just few clicks.
             </p>
+            <img src="img /background-chain.svg" alt="" class="hero-svg" />
           </div>
         </div>
       </div>
 
        
-        <div class="img-container">
+        <!-- <div class="img-container">
           <img
             class="cir"
             src="img /circle layer.png"
             alt=" picture of Ellipse"
           />
-        </div>
+        </div> -->
       </section>
       <!--    VIEWS ARTICLE    -->
       <section class="">
@@ -325,7 +326,8 @@
       </section>
 
       <!-- FAQ SECTION -->
-      <section class="faq-section container section-center">
+      <section class="faq-section">
+        <div class="section-center">
         <h2 class="faq-heading">
           <span> <div class="title-bar"></div></span>
           FAQs
@@ -333,7 +335,7 @@
         <div class="faq-container">
           <p class="faq-description">
             How does URL shortening work?
-            <span><img src="img/minus.svg" alt="" /></span>
+            <span><img src="img /minus.svg" alt="" /></span>
           </p>
           <ul class="faq-lists">
             <li class="faq-list">
@@ -344,40 +346,41 @@
             </li>
             <li class="faq-list">
               Is it necessary to create an account to use the URL shortening
-              service? <span><img src="img/plus.svg" alt="" /></span>
+              service? <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               Are the shortened links permanent? Will they expire?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               Are there any limitations on the number of URLs I can shorten?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               Can I customize the shortened URLs to reflect my brand or content?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               Can I track the performance of my shortened URLs?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               How secure is the URL shortening service? Are the shortened links
               protected against spam or malicious activity?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               What is a QR code and what can it do?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
             <li class="faq-list">
               Is there an API available for integrating the URL shortening
               service into my own applications or websites?
-              <span><img src="img/plus.svg" alt="" /></span>
+              <span><img src="img /plus.svg" alt="" /></span>
             </li>
           </ul>
         </div>
+      </div>
       </section>
     </main>
     <!-- FOOTER-SECTION -->
@@ -388,28 +391,28 @@
       </div>
     </footer>
 
-    <footer class="main-footer container">
-      <div class="footer-center  section-center">
+    <footer class="main-footer ">
+      <div class="footer-center section-center ">
         <div class="footer-body">
           <div class="footer-body-main">
             <div class="footer-icons">
               <div>
-                <img src="img/black-logo (1).svg" alt="" class="footer-logo" />
+                <img src="img /black-logo.svg" alt="" class="footer-logo" />
               </div>
 
               <div class="icons">
                 <ul class="icon-lists">
                   <li class="icon-list">
-                    <img src="img/i.fi-social-twitter.svg" alt="" />
+                    <img src="img /i.fi-social-twitter.svg" alt="" />
                   </li>
                   <li class="icon-list">
-                    <img src="img/svg.feather.svg" alt="" />
+                    <img src="img /svg.feather.svg" alt="" />
                   </li>
                   <li class="icon-list">
-                    <img src="img/i.fi-social-linkedin.svg" alt="" />
+                    <img src="img /i.fi-social-linkedin.svg" alt="" />
                   </li>
                   <li class="icon-list">
-                    <img src="img/i.fi-social-facebook.svg" alt="" />
+                    <img src="img /i.fi-social-facebook.svg" alt="" />
                   </li>
                 </ul>
               </div>
